# trend-grid

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: build.yml  release.yml
examples/: server.rs
fixtures/: tgs.conf
src/: config.rs  error.rs  lib.rs  tgs.rs
src/grid/: fixed_grid_service.rs  grid_service.rs  mod.rs
src/market/: binance_service.rs  mod.rs
src/serde/: mod.rs
src/trade/: binance_api_params.rs  binance_api_response.rs  binance_api_service.rs  binance_api_ws.rs  mod.rs
